<resources>
    <string name="app_name">MyTodo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_entry_todo">EntryTodo</string>

    <string name="title">タイトル</string>
    <string name="due_date">期日</string>
    <string name="memo">メモ</string>
    <string name="status_complete">完了</string>
    <string name="status_imcomplete">未完了</string>
    <string name="entry">登録</string>
</resources>
